fixed import transactions alignment

--- a/client/scss/partials/_transactions.scss
+++ b/client/scss/partials/_transactions.scss
@@ -7,3 +7,9 @@
     }
   }
 }
+
+#import-preview {
+  td {
+    text-align: center;
+  }
+}
